@@ -145,6 +145,7 @@ death.attack.avatar_ravine=%2$s crushed %1$s in a ravine
 death.attack.avatar_wave=%1$s can't surf
 death.attack.avatar_fireball=%2$s blasted %1$s with a fireball
 death.attack.avatar_airblade=%1$s was sliced by %2$s
+death.attack.avatar_flamethrower=%1$s just got ROASTED by %2$s!!
 
 entity.HumanBender.name=Human Bender
 entity.SkyBison.name=Flying Bison
