@@ -16,3 +16,4 @@ AV2 Changelog :: version a4.0
 * Airblade can chop flowers, etc. at level II
 
 > Fix airblade weird angles
+> Fix flamethrower not aggroing mobs
